--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -335,12 +335,12 @@
       </mat-form-field> -->
 
 
-     </div>
+     <!-- </div>
      <div style="width: 100%;" fxLayoutAlign="center center" fxLayout="row">
       <mat-form-field>
         <input mat-Input placeholder="Email">
   
-      </mat-form-field>
+      </mat-form-field> -->
      
 
 
